cmake_minimum_required(VERSION 3.30)
project(Basic_C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(Basic_C__ main.cpp
        Bai001/Bai_001.cpp
        Bai002/Bai_002.cpp
        Bai012/Bai_012.cpp
        Bai013/Bai_013.cpp
        Bai022/Bai_022.cpp
        Bai023/Bai_023.cpp
        Bai027/Bai_027.cpp
        Bai028/Bai_028.cpp
        Bai029/Bai_029.cpp
)
