cmake_minimum_required(VERSION 3.30)
project(Basic_C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(Basic_C__ main.cpp
        Bai001/Bai_001.cpp
        Bai002/Bai_002.cpp
        Bai012/Bai_012.cpp
        Bai013/Bai_013.cpp
        Bai022/Bai_022.cpp
        Bai023/Bai_023.cpp
        Bai027/Bai_027.cpp
        Bai028/Bai_028.cpp
        Bai029/Bai_029.cpp
        Bai035/Bai_035.cpp
        Bai036/Bai_036.cpp
        Bai049/Bai_049.cpp
        Bai050/Bai_050.cpp
        Bai058/Bai_058.cpp
        Bai059/Bai_059.cpp
        Bai064/Bai_064.cpp
        Bai068/Bai_068.cpp
        OOP/OnTap/OnTap.cpp
        OOP/BaiHoc01/Bai01.cpp
        OOP/BaiHoc01/Bai02.cpp
        OOP/BaiHoc01/Bai03.cpp
        OOP/BaiHoc01/Bai04.cpp
        OOP/BaiHoc01/Bai05.cpp
        OOP/BaiHoc01/Bai06.cpp
        OOP/BaiHoc01/Bai08.cpp
        OOP/BaiHoc01/Bai09.cpp
        OOP/BaiHoc01/Bai07.cpp
        OOP/BaiHoc03/ChuongTrinhDauTien.cpp
        OOP/BaiHoc03/UngDung1.cpp
        OOP/BaiHoc03/UngDung2.cpp
        OOP/BaiHoc11/vidu1.cpp
        OOP/BaiHoc11/vidu2.cpp
        OOP/BaiHoc11/vidu3.cpp
        OOP/BaiHoc11/vidu4.cpp
        "DSA/InterChange Sort/Lietke.cpp"
        "DSA/InterChange Sort/DemCap.cpp"
)
